2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Solver generic.
	* configure.ac: Remove plug-in Makefiles, distribute tar.bz2.
	* src/Makefile.am: Remove plug-in.
	* src/dummy.hh: Rename from src/plug-in/dummy/dummy.cc.
	* src/optimization-fwd.hh: Fix Solver type.
	* src/plug-in/Makefile.am: Remove.
	* src/plug-in/dummy/Makefile.am: Remove.
	* src/solver.hh: Make Solver generic.
	* src/solver.hxx: Rename from src/solver.cc.
	* tests/Makefile.am: Fix test linking.
	* tests/simple-test.at: Fix test description.
	* tests/simple-test.cc: Use generic solver class.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Generate pkg-config file.
	* Makefile.am: Add generation and install rules.
	* build-aux/pkg-config.pc.in: New.
	* configure.ac: Build tar.bz2 tarball.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement dummy solver.
	* configure.ac: Search for Boost.
	* src/Makefile.am: Fix filenames.
	* src/optimization-fwd.hh: Add forward declarations.
	* src/plug-in/dummy/dummy.cc: Implement dummy solver.
	* src/solver.cc,
	* src/solver.hh: Implement abstract solver.
	* tests/common.hh: Fix GENERATE_TEST macro.
	* tests/simple-test.at: Fix description.
	* tests/simple-test.cc: Implement test using the dummy solver.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Update and add support for Boost.Optional.
	* build-aux/boost.m4: Here.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Rename main header/source files.
	* src/solver.cc: Rename from src/optimization.cc.
	* src/solver.hh: Rename from src/optimization.hh.

2009-03-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Add dummy plug-in placeholder.
	* configure.ac: Generate plug-in, dummy Makefiles.
	* src/Makefile.am: Add plug-in to SUBDIRS.
	* src/plug-in/Makefile.am: New.
	* src/plug-in/dummy/Makefile.am: New.
	* src/plug-in/dummy/dummy.cc: New.

2009-03-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Ignore svnw related files.
	* .gitignore: Here.
